# reefd

./: .gitignore  README.md  main.cc  reefd.pro
classes/: config.cc  config.h  desktop.cc  desktop.h  dmbgr.cc  dmbgr.h  socket.cc  socket.h
include/: constants.h  properties.h  singleton.h
rp2040/: CMakeLists.txt  README.md
rp2040/spy/: CMakeLists.txt  spy.cc
rp2040/spy/can/: can2040.h
rp2040/spy/display/: display.cc  display.h
